--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div id="maincontainer" class="container-fluid p-0">
         <div class="row justify-content-center">
-            <div id="logocol" class="col-md-4 col-sm-6 col-10 d-flex justify-content-center"><img class="img-fluid"
+            <div id="logocol" class="col-xl-2 col-lg-3 col-md-4 col-sm-6 col-10 d-flex justify-content-center"><img class="img-fluid"
                     src="static/images/logo.png" alt="Amazon"></div>
         </div>
         <div class="row justify-content-center rowmargin">
-            <div class="col-md-4 col-sm-6 col-10">
+            <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6 col-10">
                 <form id="signinform">
                     <h3>Sign-In</h3>
                     <div class="form-group">
-                        <label id="emaillabel" class="mb-0" for="exampleInputEmail1">Email or mobile phone number</label>
+                        <label id="emaillabel" class="mb-0" for="exampleInputEmail1">Email or mobile phone
+                            number</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
                     <button id="submitbtn" type="submit" class="btn btn-warning btn-block p-1">Continue</button>
@@ -44,14 +45,24 @@
                 </form>
             </div>
         </div>
-        <div class="row justify-content-center rowmargin">
-            <div class="col-md-4 col-sm-6 col-10">
+        <div class="row justify-content-center">
+            <div class="col-xl-3 col-lg-3 col-md-5 col-sm-6 col-10 pb-2">
                 <p id="newp" class="tinytext">New to Amazon?</p>
                 <button id="createbutton" class="btn btn-light btn-block p-1">Create account</button>
             </div>
         </div>
+    </div>
+    <div id="footercontainer" class="container-fluid p-0">
+        <div class="row" id="footerborderrow"></div>
         <div id="footerrow" class="row justify-content-center">
-            <div class="col-md-4 col-sm-6 col-10">
+            <div class="col-xl-3 col-lg-3 col-md-5 col-sm-6 col-10">
+                <ul id="footerul">
+                    <li><a class="tinytext">Conditions of Use</a></li>
+                    <li><a class="tinytext">Privacy Notice</a></li>
+                    <li><a class="tinytext">Help</a></li>
+                </ul>
+                <p id="footertext" class="tinytext">© 2022, Sam Davitt - this site serves no purpose other than CSS
+                    practice.</p>
             </div>
         </div>
     </div>
